# minit

./: Cargo.toml  Dockerfile  Dockerfile-aarch64  Dockerfile-x86_64  README.md  entrypoint.sh
.circleci/: config.yml
.github/workflows/: build.yaml
src/: environment.rs  lib.rs  main.rs
src/templ/: busybox.rs  mod.rs  openrc.rs  systemd.rs
