[package]
name = "minit"
version = "0.1.0"
edition = "2021"
description = "Simple init and signal forwarder for containers."
authors = ["Daniel Brenot <dbrenot@nanite-factory.net>"]
repository = "https://github.com/Nanite-Factory-Games/minit"
readme = "README.md"
keywords = ["init", "container", "vm"]
categories = ["command-line-utilities"]
license = "GPL-3.0+"

[dependencies]
libc = "~0.2"
clap = { version="4.5.16", features=["derive"] }
log = "~0.4"
env_logger = "~0.11.5"
nix = { version="0.29.0", features=["signal", "process", "term"] }
serde = { version = "1.0", features = ["derive"] }
jsonic = "0.2.12"
