[package]
name = "minit"
version = "0.1.0"
edition = "2021"
description = "Simple init and signal forwarder for containers."
authors = ["Daniel Brenot <dbrenot@nanite-factory.net>"]
repository = "https://github.com/Nanite-Factory-Games/minit"
readme = "README.md"
keywords = ["init", "container", "vm"]
categories = ["command-line-utilities"]
license = "GPL-3.0+"

[dependencies]
libc = "~0.2"
log = "~0.4"
env_logger = "~0.11.5"
nix = { version="0.29.0", features=["signal", "process", "term", "mount"] }
serde = { version = "1.0", features = ["derive"] }
jsonic = "0.2.12"
serde_json = "1.0.127"
anyhow = "1.0.86"

# [profile.release]
# opt-level = 'z'     # Optimize for size.
# lto = true          # Enable Link Time Optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
rustflags = [
    "-C", "target-feature=+crt-static",
    "-C", "link-arg=-static"
]
